# RoboBand

./: .gitignore  CMakeLists.txt  CtrBoard-H7_ALL.ioc  Makefile  README.md  STM32H723VGTx_FLASH.ld  compile_commands.json
App/: compatible.cc  imu.cc  led_task.c  remoter.c  robot_ctrl.cc  sbus_port.c
App/chassis/: double_wheel_balance_chassis.cc
App/inc/: imu.hpp  remoter.h
Bsp/: bsp_usart.c  bsp_user_key.c  w25q64.c
Bsp/inc/: bsp_usart.h  w25q64.h  ws2812.h
Core/Inc/: main.h  octospi.h  spi.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h  usart.h
Core/Src/: adc.c  dma.c  fdcan.c  gpio.c  main.c  octospi.c  spi.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  tim.c  usart.c  usb_otg.c
app/: CMakeLists.txt  main.cc  robot_create.cc  robot_create.hpp
app/lqr_sim/: lqr_sim.cc  lqr_sim.hpp
cmake/: easyloggingpp.cmake  serial.cmake  tomlplusplus.cmake
log/: log.conf
src/: CMakeLists.txt  main.cc
src/ctrl/: ctrl.hpp  runner.cc  runner.hpp
src/ctrl/balance/inc/: balance.hpp
src/ctrl/balance_sys/: balance_sys.cc  balance_sys.hpp
src/ctrl/chassis/: balance.cc  lqr_sim.cc
src/ctrl/chassis/inc/: balance.hpp  lqr_sim.hpp
src/dev/: dev.hpp  webots_imu.cc  webots_imu.hpp  webots_motor.cc  webots_motor.hpp
src/dev/inc/: webots_imu.hpp  webots_motor.hpp
src/io/: io.hpp  serial.cc  serial.hpp  socket.cc  socket.hpp  webots.cc  webots.hpp
src/io/webots/: webots.cc
src/io/webots/inc/: webots.hpp
src/motor/inc/: motor.hpp  webots_motor.hpp
src/robot/: robot.cc  robot.hpp
src/robot/inc/: robot.hpp
src/robot/lqr_sim/: default.toml  lqr_sim.cc  lqr_sim.hpp
src/runner/: runner.cc  runner.hpp
src/runner/inc/: runner.hpp
src/util/: util.cc  util.hpp
src/virtual/: imu.hpp  motor.cc  motor.hpp
src/virtual/inc/: motor.hpp
(+7 files in other folders)
